# petsc

./: CMakeLists.txt  configure
config/BuildSystem/config/: framework.py  setCompilers.py
